parser/rfc5322_parser.go
// Code generated from RFC5322Parser.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // RFC5322Parser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'\u0000'", "", "'\t'", "'\n'", "'\u000B'", "'\u000C'", "'\r'", "",
	"' '", "'!'", "'\"'", "'#'", "'$'", "'%'", "'&'", "'''", "'('", "')'",
	"'*'", "'+'", "','", "'-'", "'.'", "'/'", "", "':'", "';'", "'<'", "'='",
	"'>'", "'?'", "'@'", "'['", "'\\'", "']'", "'^'", "'_'", "'`'", "'{'",
	"'|'", "'}'", "'~'", "'\u007F'",
}
var symbolicNames = []string{
	"", "U_00", "U_01_08", "TAB", "LF", "U_0B", "U_0C", "CR", "U_0E_1F", "SP",
	"Exclamation", "DQuote", "Hash", "Dollar", "Percent", "Ampersand", "SQuote",
	"LParens", "RParens", "Asterisk", "Plus", "Comma", "Minus", "Period", "Slash",
	"Digit", "Colon", "Semicolon", "Less", "Equal", "Greater", "Question",
	"At", "LBracket", "Backslash", "RBracket", "Caret", "Underscore", "Backtick",
	"LCurly", "Pipe", "RCurly", "Tilde", "Delete", "UTF8NonAscii", "A", "B",
	"C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q",
	"R", "S", "T", "U", "V", "W", "X", "Y", "Z",
}

var ruleNames = []string{
	"quotedChar", "quotedPair", "fws", "ctext", "ccontent", "comment", "cfws",
	"atext", "atom", "dotAtom", "qtext", "quotedContent", "quotedValue", "quotedString",
	"word", "dateTime", "dayOfweek", "dayName", "day", "month", "year", "hour",
	"minute", "second", "offset", "zone", "address", "mailbox", "nameAddr",
	"angleAddr", "group", "unspaced", "displayName", "mailboxList", "addressList",
	"groupList", "addrSpec", "localPart", "port", "domain", "domainLiteral",
	"dtext", "obsNoWSCTL", "obsCtext", "obsQtext", "obsQP", "obsFWS", "obsZone",
	"obsAngleAddr", "obsRoute", "obsDomainList", "obsMboxList", "obsAddrList",
	"obsGroupList", "obsLocalPart", "obsDomain", "encodedWord", "charset",
	"encoding", "token", "tokenChar", "encodedText", "encodedChar", "crlf",
	"wsp", "vchar", "alpha",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type RFC5322Parser struct {
	*antlr.BaseParser
}

func NewRFC5322Parser(input antlr.TokenStream) *RFC5322Parser {
	this := new(RFC5322Parser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "RFC5322Parser.g4"

	return this
}

// RFC5322Parser tokens.
const (
	RFC5322ParserEOF          = antlr.TokenEOF
	RFC5322ParserU_00         = 1
	RFC5322ParserU_01_08      = 2
	RFC5322ParserTAB          = 3
	RFC5322ParserLF           = 4
	RFC5322ParserU_0B         = 5
	RFC5322ParserU_0C         = 6
	RFC5322ParserCR           = 7
	RFC5322ParserU_0E_1F      = 8
	RFC5322ParserSP           = 9
	RFC5322ParserExclamation  = 10
	RFC5322ParserDQuote       = 11
	RFC5322ParserHash         = 12
	RFC5322ParserDollar       = 13
	RFC5322ParserPercent      = 14
	RFC5322ParserAmpersand    = 15
	RFC5322ParserSQuote       = 16
	RFC5322ParserLParens      = 17
	RFC5322ParserRParens      = 18
	RFC5322ParserAsterisk     = 19
	RFC5322ParserPlus         = 20
	RFC5322ParserComma        = 21
	RFC5322ParserMinus        = 22
	RFC5322ParserPeriod       = 23
	RFC5322ParserSlash        = 24
	RFC5322ParserDigit        = 25
	RFC5322ParserColon        = 26
	RFC5322ParserSemicolon    = 27
	RFC5322ParserLess         = 28
	RFC5322ParserEqual        = 29
	RFC5322ParserGreater      = 30
	RFC5322ParserQuestion     = 31
	RFC5322ParserAt           = 32
	RFC5322ParserLBracket     = 33
	RFC5322ParserBackslash    = 34
	RFC5322ParserRBracket     = 35
	RFC5322ParserCaret        = 36
	RFC5322ParserUnderscore   = 37
	RFC5322ParserBacktick     = 38
	RFC5322ParserLCurly       = 39
	RFC5322ParserPipe         = 40
	RFC5322ParserRCurly       = 41
	RFC5322ParserTilde        = 42
	RFC5322ParserDelete       = 43
	RFC5322ParserUTF8NonAscii = 44
	RFC5322ParserA            = 45
	RFC5322ParserB            = 46
	RFC5322ParserC            = 47
	RFC5322ParserD            = 48
	RFC5322ParserE            = 49
	RFC5322ParserF            = 50
	RFC5322ParserG            = 51
	RFC5322ParserH            = 52
	RFC5322ParserI            = 53
	RFC5322ParserJ            = 54
	RFC5322ParserK            = 55
	RFC5322ParserL            = 56
	RFC5322ParserM            = 57
	RFC5322ParserN            = 58
	RFC5322ParserO            = 59
	RFC5322ParserP            = 60
	RFC5322ParserQ            = 61
	RFC5322ParserR            = 62
	RFC5322ParserS            = 63
	RFC5322ParserT            = 64
	RFC5322ParserU            = 65
	RFC5322ParserV            = 66
	RFC5322ParserW            = 67
	RFC5322ParserX            = 68
	RFC5322ParserY            = 69
	RFC5322ParserZ            = 70
)

// RFC5322Parser rules.
const (
	RFC5322ParserRULE_quotedChar    = 0
	RFC5322ParserRULE_quotedPair    = 1
	RFC5322ParserRULE_fws           = 2
	RFC5322ParserRULE_ctext         = 3
	RFC5322ParserRULE_ccontent      = 4
	RFC5322ParserRULE_comment       = 5
	RFC5322ParserRULE_cfws          = 6
	RFC5322ParserRULE_atext         = 7
	RFC5322ParserRULE_atom          = 8
	RFC5322ParserRULE_dotAtom       = 9
	RFC5322ParserRULE_qtext         = 10
	RFC5322ParserRULE_quotedContent = 11
	RFC5322ParserRULE_quotedValue   = 12
	RFC5322ParserRULE_quotedString  = 13
	RFC5322ParserRULE_word          = 14
	RFC5322ParserRULE_dateTime      = 15
	RFC5322ParserRULE_dayOfweek     = 16
	RFC5322ParserRULE_dayName       = 17
	RFC5322ParserRULE_day           = 18
	RFC5322ParserRULE_month         = 19
	RFC5322ParserRULE_year          = 20
	RFC5322ParserRULE_hour          = 21
	RFC5322ParserRULE_minute        = 22
	RFC5322ParserRULE_second        = 23
	RFC5322ParserRULE_offset        = 24
	RFC5322ParserRULE_zone          = 25
	RFC5322ParserRULE_address       = 26
	RFC5322ParserRULE_mailbox       = 27
	RFC5322ParserRULE_nameAddr      = 28
	RFC5322ParserRULE_angleAddr     = 29
	RFC5322ParserRULE_group         = 30
	RFC5322ParserRULE_unspaced      = 31
	RFC5322ParserRULE_displayName   = 32
	RFC5322ParserRULE_mailboxList   = 33
	RFC5322ParserRULE_addressList   = 34
	RFC5322ParserRULE_groupList     = 35
	RFC5322ParserRULE_addrSpec      = 36
	RFC5322ParserRULE_localPart     = 37
	RFC5322ParserRULE_port          = 38
	RFC5322ParserRULE_domain        = 39
	RFC5322ParserRULE_domainLiteral = 40
	RFC5322ParserRULE_dtext         = 41
	RFC5322ParserRULE_obsNoWSCTL    = 42
	RFC5322ParserRULE_obsCtext      = 43
	RFC5322ParserRULE_obsQtext      = 44
	RFC5322ParserRULE_obsQP         = 45
	RFC5322ParserRULE_obsFWS        = 46
	RFC5322ParserRULE_obsZone       = 47
	RFC5322ParserRULE_obsAngleAddr  = 48
	RFC5322ParserRULE_obsRoute      = 49
	RFC5322ParserRULE_obsDomainList = 50
	RFC5322ParserRULE_obsMboxList   = 51
	RFC5322ParserRULE_obsAddrList   = 52
	RFC5322ParserRULE_obsGroupList  = 53
	RFC5322ParserRULE_obsLocalPart  = 54
	RFC5322ParserRULE_obsDomain     = 55
	RFC5322ParserRULE_encodedWord   = 56
	RFC5322ParserRULE_charset       = 57
	RFC5322ParserRULE_encoding      = 58
	RFC5322ParserRULE_token         = 59
	RFC5322ParserRULE_tokenChar     = 60
	RFC5322ParserRULE_encodedText   = 61
	RFC5322ParserRULE_encodedChar   = 62
	RFC5322ParserRULE_crlf          = 63
	RFC5322ParserRULE_wsp           = 64
	RFC5322ParserRULE_vchar         = 65
	RFC5322ParserRULE_alpha         = 66
)

// IQuotedCharContext is an interface to support dynamic dispatch.
type IQuotedCharContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQuotedCharContext differentiates from other interfaces.
	IsQuotedCharContext()
}

type QuotedCharContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQuotedCharContext() *QuotedCharContext {
	var p = new(QuotedCharContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RFC5322ParserRULE_quotedChar
	return p
}

func (*QuotedCharContext) IsQuotedCharContext() {}

func NewQuotedCharContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QuotedCharContext {
	var p = new(QuotedCharContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RFC5322ParserRULE_quotedChar

	return p
}

func (s *QuotedCharContext) GetParser() antlr.Parser { return s.parser }

func (s *QuotedCharContext) Vchar() IVcharContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVcharContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVcharContext)
}

func (s *QuotedCharContext) Wsp() IWspContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWspContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWspContext)
}

func (s *QuotedCharContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QuotedCharContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QuotedCharContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RFC5322ParserListener); ok {
		listenerT.EnterQuotedChar(s)
	}
}

func (s *QuotedCharContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RFC5322ParserListener); ok {
		listenerT.ExitQuotedChar(s)
	}
}

func (p *RFC5322Parser) QuotedChar() (localctx IQuotedCharContext) {
	localctx = NewQuotedCharContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, RFC5322ParserRULE_quotedChar)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(136)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case RFC5322ParserExclamation, RFC5322ParserDQuote, RFC5322ParserHash, RFC5322ParserDollar, RFC5322ParserPercent, RFC5322ParserAmpersand, RFC5322ParserSQuote, RFC5322ParserLParens, RFC5322ParserRParens, RFC5322ParserAsterisk, RFC5322ParserPlus, RFC5322ParserComma, RFC5322ParserMinus, RFC5322ParserPeriod, RFC5322ParserSlash, RFC5322ParserDigit, RFC5322ParserColon, RFC5322ParserSemicolon, RFC5322ParserLess, RFC5322ParserEqual, RFC5322ParserGreater, RFC5322ParserQuestion, RFC5322ParserAt, RFC5322ParserLBracket, RFC5322ParserBackslash, RFC5322ParserRBracket, RFC5322ParserCaret, RFC5322ParserUnderscore, RFC5322ParserBacktick, RFC5322ParserLCurly, RFC5322ParserPipe, RFC5322ParserRCurly, RFC5322ParserTilde, RFC5322ParserUTF8NonAscii, RFC5322ParserA, RFC5322ParserB, RFC5322ParserC, RFC5322ParserD, RFC5322ParserE, RFC5322ParserF, RFC5322ParserG, RFC5322ParserH, RFC5322ParserI, RFC5322ParserJ, RFC5322ParserK, RFC5322ParserL, RFC5322ParserM, RFC5322ParserN, RFC5322ParserO, RFC5322ParserP, RFC5322ParserQ, RFC5322ParserR, RFC5322ParserS, RFC5322ParserT, RFC5322ParserU, RFC5322ParserV, RFC5322ParserW, RFC5322ParserX, RFC5322ParserY, RFC5322ParserZ:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(134)
			p.Vchar()
		}

	case RFC5322ParserTAB, RFC5322ParserSP:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(135)
			p.Wsp()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IQuotedPairContext is an interface to support dynamic dispatch.
type IQuotedPairContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQuotedPairContext differentiates from other interfaces.
	IsQuotedPairContext()
}

type QuotedPairContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQuotedPairContext() *QuotedPairContext {
	var p = new(QuotedPairContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RFC5322ParserRULE_quotedPair
	return p
}

func (*QuotedPairContext) IsQuotedPairContext() {}

func NewQuotedPairContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QuotedPairContext {
	var p = new(QuotedPairContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RFC5322ParserRULE_quotedPair

	return p
}

func (s *QuotedPairContext) GetParser() antlr.Parser { return s.parser }

func (s *QuotedPairContext) Backslash() antlr.TerminalNode {
	return s.GetToken(RFC5322ParserBackslash, 0)
}

func (s *QuotedPairContext) QuotedChar() IQuotedCharContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQuotedCharContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IQuotedCharContext)
}

func (s *QuotedPairContext) ObsQP() IObsQPContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObsQPContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObsQPContext)
}

func (s *QuotedPairContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QuotedPairContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QuotedPairContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RFC5322ParserListener); ok {
		listenerT.EnterQuotedPair(s)
	}
}

func (s *QuotedPairContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RFC5322ParserListener); ok {
		listenerT.ExitQuotedPair(s)
	}
}

func (p *RFC5322Parser) QuotedPair() (localctx IQuotedPairContext) {
	localctx = NewQuotedPairContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, RFC5322ParserRULE_quotedPair)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(141)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(138)
			p.Match(RFC5322ParserBackslash)
		}
		{
			p.SetState(139)
			p.QuotedChar()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(140)
			p.ObsQP()
		}

	}

	return localctx
}

// IFwsContext is an interface to support dynamic dispatch.
type IFwsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFwsContext differentiates from other interfaces.
	IsFwsContext()
}

type FwsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFwsContext() *FwsContext {
	var p = new(FwsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RFC5322ParserRULE_fws
	return p
}

func (*FwsContext) IsFwsContext() {}

func NewFwsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FwsContext {
	var p = new(FwsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RFC5322ParserRULE_fws

	return p
}

func (s *FwsContext) GetParser() antlr.Parser { return s.parser }

func (s *FwsContext) Crlf() ICrlfContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICrlfContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICrlfContext)
}

func (s *FwsContext) AllWsp() []IWspContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IWspContext)(nil)).Elem())
	var tst = make([]IWspContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IWspContext)
		}
	}

	return tst
}

func (s *FwsContext) Wsp(i int) IWspContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWspContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IWspContext)
}

func (s *FwsContext) ObsFWS() IObsFWSContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObsFWSContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObsFWSContext)
}

func (s *FwsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FwsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FwsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RFC5322ParserListener); ok {
		listenerT.EnterFws(s)
	}
}

func (s *FwsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RFC5322ParserListener); ok {
		listenerT.ExitFws(s)
	}
}

func (p *RFC5322Parser) Fws() (localctx IFwsContext) {
	localctx = NewFwsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, RFC5322ParserRULE_fws)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.SetState(158)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		p.SetState(150)
		p.GetErrorHandler().Sync(p)

		if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) == 1 {
			p.SetState(146)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for _la == RFC5322ParserTAB || _la == RFC5322ParserSP {
				{
					p.SetState(143)
					p.Wsp()
				}

				p.SetState(148)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(149)
				p.Crlf()
			}

		}
		p.SetState(153)
		p.GetErrorHandler().Sync(p)
		_alt = 1
		for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			switch _alt {
			case 1:
				{
					p.SetState(152)
					p.Wsp()
				}

			default:
				panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			}

			p.SetState(155)
			p.GetErrorHandler().Sync(p)
			_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(157)
			p.ObsFWS()
		}

	}

	return localctx
}

// ICtextContext is an interface to support dynamic dispatch.
type ICtextContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCtextContext differentiates from other interfaces.
	IsCtextContext()
}

type CtextContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCtextContext() *CtextContext {
	var p = new(CtextContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RFC5322ParserRULE_ctext
	return p
}

func (*CtextContext) IsCtextContext() {}

func NewCtextContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CtextContext {
	var p = new(CtextContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RFC5322ParserRULE_ctext

	return p
}

func (s *CtextContext) GetParser() antlr.Parser { return s.parser }

func (s *CtextContext) Alpha() IAlphaContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAlphaContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAlphaContext)
}

func (s *CtextContext) Exclamation() antlr.TerminalNode {
	return s.GetToken(RFC5322ParserExclamation, 0)
}

func (s *CtextContext) DQuote() antlr.TerminalNode {
	return s.GetToken(RFC5322ParserDQuote, 0)
}

func (s *CtextContext) Hash() antlr.TerminalNode {
	return s.GetToken(RFC5322ParserHash, 0)
}

func (s *CtextContext) Dollar() antlr.TerminalNode {
	return s.GetToken(RFC5322ParserDollar, 0)
}

func (s *CtextContext) Percent() antlr.TerminalNode {
	return s.GetToken(RFC5322ParserPercent, 0)
}
